{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 1114,
  "lineage": "dac106bf-df52-89ed-fc48-9d7bbf77b37d",
  "resources": [
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "private_subnetwork",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.3.16.1",
            "id": "europe-west2/example-private-cluster-network-aene-subnetwork-private",
            "ip_cidr_range": "10.3.16.0/20",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/example-private-cluster-network-aene-network",
            "private_ip_google_access": true,
            "project": "magento2-269418",
            "region": "europe-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.16.0/20",
                "range_name": "private-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/regions/europe-west2/subnetworks/example-private-cluster-network-aene-subnetwork-private"
          }
        }
      ]
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "public_subnetwork",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.3.0.1",
            "id": "europe-west2/example-private-cluster-network-aene-subnetwork-public",
            "ip_cidr_range": "10.3.0.0/20",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/example-private-cluster-network-aene-network",
            "private_ip_google_access": true,
            "project": "magento2-269418",
            "region": "europe-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.0.0/20",
                "range_name": "public-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/regions/europe-west2/subnetworks/example-private-cluster-network-aene-subnetwork-public"
          }
        }
      ]
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private_allow_all_network_inbound",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2020-05-18T01:19:18.175-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "example-private-cluster-network-aene-private-allow-ingress",
            "name": "example-private-cluster-network-aene-private-allow-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/example-private-cluster-network-aene-network",
            "priority": 1000,
            "project": "magento2-269418",
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/firewalls/example-private-cluster-network-aene-private-allow-ingress",
            "source_ranges": [
              "10.3.0.0/20",
              "10.3.16.0/20",
              "10.4.0.0/20",
              "10.4.16.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "private"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "module.vpc_network.google_compute_subnetwork.vpc_subnetwork_private",
            "module.vpc_network.google_compute_subnetwork.vpc_subnetwork_public",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private_allow_restricted_network_inbound",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2020-05-18T01:18:30.366-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "example-private-cluster-network-aene-allow-restricted-inbound",
            "name": "example-private-cluster-network-aene-allow-restricted-inbound",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/example-private-cluster-network-aene-network",
            "priority": 1000,
            "project": "magento2-269418",
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/firewalls/example-private-cluster-network-aene-allow-restricted-inbound",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "private",
              "private-persistence"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "private-persistence"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "public_allow_all_inbound",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2020-05-18T01:18:29.863-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "example-private-cluster-network-aene-public-allow-ingress",
            "name": "example-private-cluster-network-aene-public-allow-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/example-private-cluster-network-aene-network",
            "priority": 1000,
            "project": "magento2-269418",
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/firewalls/example-private-cluster-network-aene-public-allow-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "public"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "example-private-cluster-network-aene-network",
            "name": "example-private-cluster-network-aene-network",
            "project": "magento2-269418",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/example-private-cluster-network-aene-network"
          },
          "dependencies": [
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "vpc_router",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-05-18T01:18:30.088-07:00",
            "id": "europe-west2/example-private-cluster-network-aene-router",
            "name": "example-private-cluster-network-aene-router",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/example-private-cluster-network-aene-network",
            "project": "magento2-269418",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/regions/europe-west2/routers/example-private-cluster-network-aene-router"
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "vpc_nat",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "magento2-269418/europe-west2/example-private-cluster-network-aene-router/example-private-cluster-network-aene-nat",
            "min_ports_per_vm": 0,
            "name": "example-private-cluster-network-aene-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "magento2-269418",
            "region": "europe-west2",
            "router": "example-private-cluster-network-aene-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/magento2-269418/regions/europe-west2/subnetworks/example-private-cluster-network-aene-subnetwork-public",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "module.vpc_network.google_compute_router.vpc_router",
            "module.vpc_network.google_compute_subnetwork.vpc_subnetwork_public",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork_private",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-05-18T01:18:30.350-07:00",
            "enable_flow_logs": true,
            "fingerprint": "OkmKRD8TWv0=",
            "gateway_address": "10.3.16.1",
            "id": "europe-west2/example-private-cluster-network-aene-subnetwork-private",
            "ip_cidr_range": "10.3.16.0/20",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "example-private-cluster-network-aene-subnetwork-private",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/example-private-cluster-network-aene-network",
            "private_ip_google_access": true,
            "project": "magento2-269418",
            "region": "europe-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.16.0/20",
                "range_name": "private-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/regions/europe-west2/subnetworks/example-private-cluster-network-aene-subnetwork-private"
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork_public",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-05-18T01:18:30.111-07:00",
            "enable_flow_logs": true,
            "fingerprint": "0lIVZeZrDWc=",
            "gateway_address": "10.3.0.1",
            "id": "europe-west2/example-private-cluster-network-aene-subnetwork-public",
            "ip_cidr_range": "10.3.0.0/20",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "example-private-cluster-network-aene-subnetwork-public",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/example-private-cluster-network-aene-network",
            "private_ip_google_access": true,
            "project": "magento2-269418",
            "region": "europe-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.0.0/20",
                "range_name": "public-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/regions/europe-west2/subnetworks/example-private-cluster-network-aene-subnetwork-public"
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "random_string.suffix"
          ]
        }
      ]
    }
  ]
}